fix(ui): Update suggestions box (#12129)
* Update suggestions box

The actions box no longer covers the text field under it. Also fixed spacing between the buttons inside the box.

Closes: #8356

* Update button styles in style-bootstrap.css

Bring back removed styles. They are used by several elements. If removed they break some of the UI.

Related: #8356

* Fix comments and suggestions tooltip

Add gap between suggestion and comment elements. To prevent the tooltip from covering the content of the item before it

* Fix RTL text alignment

Fixed the text to show completely on the right side of the suggestion view box. Instead of showing in the middle.

* chore: update gap in container-gapped to 40px

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -583,6 +583,12 @@ form + .login-label {
   padding: 0;
 }
 
+.container-gapped {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
 .comment-content {
   border-radius: 0 5px 5px 5px;
   background-color: #e5f0f2;
@@ -602,14 +608,27 @@ form + .login-label {
   color: #bfc3c7;
 }
 
+#suggestions {
+  margin-top: 55px;
+}
+
 .btn-float {
+  display: flex;
+  gap: 5px;
+  padding: 4px;
   background-color: #fff;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
-  border-radius: 3px;
-  position: relative;
-  top: -5px;
+  border-radius: 5px;
+  position: absolute;
+  right: 15px;
+  transform: translateY(-100%);
   z-index: 10;
-  padding: 0 2px;
+}
+
+@media only screen and (max-width: 600px) {
+  .btn-float {
+    left: 20px;
+  }
 }
 
 .btn-float .btn,
